# lightsaber

./: Cargo.toml  build.bat  linker.ld  run.bat
bundled/ovmf/: OVMF_VARS.fd
lightsaber_bootloader/: Cargo.toml
lightsaber_bootloader/src/: lib.rs  load.rs  logger.rs  main.rs  paging.rs  unwind.rs
lightsaber_graphics/: Cargo.toml
lightsaber_graphics/src/: lib.rs
lightsaber_graphics/src/debug/: colour.rs  mod.rs  renderer.rs
lightsaber_kernel/: Cargo.toml
lightsaber_kernel/src/: logger.rs  main.rs  renderer.rs  unwind.rs
lightsaber_kernel/src/architecture/: mod.rs
lightsaber_kernel/src/architecture/amd64/: gdt.rs  mod.rs  processor.rs
lightsaber_kernel/src/architecture/amd64/interrupts/: exceptions.rs  idt.rs  mod.rs
src/: main.rs  panicking.rs
