[package]
name = "lightsaber_bootloader"
version = "0.1.1"
authors = ["HTGAzureX1212"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.log]
version = "0.4.14"
default-features = false

[dependencies.rlibc]
version = "1.0.0"

[dependencies.uefi]
version = "0.8.0"

[dependencies.uefi-services]
version = "0.5.0"

[dependencies.xmas-elf]
version = "0.7.0"

[dependencies.x86_64]
version = "0.13.6"
