[package]
name = "lightsaber_graphics"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bit_field]
version = "0.10.1"

[dependencies.font8x8]
version = "0.3.1"
default-features = false
features = [ "unicode" ]
